--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,7 @@ html {
 /* Hide scrollbar */
 @layer utilities {
   @layer utilities responsive {
+
     /* Hide scrollbar for Chrome, Safari, and Opera */
     .no-scrollbar::-webkit-scrollbar {
       display: none;
@@ -35,4 +36,17 @@ html {
       /* Firefox */
     }
   }
+}
+
+/* Hide arrows in input number */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
